Improvements proposed by Reviewers & spotless:apply